k8s/app-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-server
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: app
  template:
    metadata:
      labels:
        tier: app
    spec:
      containers:
        - name: spring-service
          image: stefanteof/libapp-backend:latest
          ports:
            - containerPort: 8181
