k8s/app-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-server-svc
spec:
  selector:
    tier: app
  ports:
    - port: 8181         # Internal service port
      targetPort: 8181   # Matches exposed port in container
