k8s/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: library-app
spec:
  selector:
    component: db
  ports:
    - port: 3306        # Service port (exposed internally)
      targetPort: 3306  # Container port (MySQL)
