k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: libapp-ingress
  namespace: library-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: library.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-client-svc
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: app-server-svc
                port:
                  number: 8181
